--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -378,6 +378,44 @@ isbn = {978-1-84973-915-3},
 doi = {10.1039/9781782628095-00133}
 }
 
+@ARTICLE{De_Vos2023-pb,
+  title     = "An integrated target field framework for point-of-care halbach
+               array low-field {MRI} system design",
+  author    = "de Vos, Bart and Remis, Rob F and Webb, Andrew G",
+  abstract  = "AbstractObjectiveLow-cost low-field point-of-care MRI systems
+               are used in many different applications. System design has
+               correspondingly different requirements in terms of imaging
+               field-of-view, spatial resolution and magnetic field strength.
+               In this work an iterative framework has been created to design a
+               cylindrical Halbach-based magnet along with integrated gradient
+               and RF coils that most efficiently fulfil a set of
+               user-specified imaging requirements.MethodsFor efficient
+               integration, target field methods are used for each of the main
+               hardware components. These have not been used previously in
+               magnet design, and a new mathematical model was derived
+               accordingly. These methods result in a framework which can
+               design an entire low-field MRI system within minutes using
+               standard computing hardware.ResultsTwo distinct point-of-care
+               systems are designed using the described framework, one for
+               neuroimaging and the other for extremity imaging. Input
+               parameters are taken from literature and the resulting systems
+               are discussed in detail.DiscussionThe framework allows the
+               designer to optimize the different hardware components with
+               respect to the desired imaging parameters taking into account
+               the interdependencies between these components and thus give
+               insight into the influence of the design choices.",
+  journal   = "MAGMA",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  36,
+  number    =  3,
+  pages     = "395--408",
+  month     =  may,
+  year      =  2023,
+  copyright = "https://creativecommons.org/licenses/by/4.0",
+  language  = "en"
+}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
