--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -79,7 +79,7 @@ The sensor testing process involves two key tests. Firstly, the
 linearity of the magnetic fields is measured with all sensors to assess
 the feasibility of using specific sensors. Secondly, the homogeneity of
 the sensors is evaluated to determine its capability to measure with
-precision greater than 1000 \gls{ppm}. In the end, the sensors should
+precision greater than 1000\gls{ppm}. In the end, the sensors should
 also measure how uniform the magnetic field is in a completed \gls{mri}
 system.
 
@@ -273,7 +273,7 @@ realm of magnetic resonance imaging. {[}Nitz2016{]}
 Within the research domain, various implementations have emerged. An
 exemplar instance is the work by O'Reilly, Teeuwisse, and Webb, who
 introduced a groundbreaking ``three-dimensional \gls{mri} in a
-homogeneous 27 cm diameter Bore Halbach Array magnet''
+homogeneous 27cm diameter Bore Halbach Array magnet''
 \cite{OReilly2019-rn} in 2019. This innovative setup was
 subsequently employed in 2020 to acquire in vivo MR images, showcasing
 the practical applications of their pioneering research
@@ -292,8 +292,8 @@ accurate imaging through a simplified approach, prioritizing clarity and
 ease in the resulting images.
 
 The Halbach magnet incorporated in this system boasts a 27cm diameter, a
-B0 field strength of 50.4 mT, and an impressive homogeneity of 2400
-\gls{ppm} over a 20cm diameter using smaller magnets
+B0 field strength of 50.4 mT, and an impressive homogeneity of
+2400\gls{ppm} over a 20cm diameter using smaller magnets
 (\(12 x 12 x 12 mm^3\)). This exceptional homogeneity enables the
 utilization of coil-based gradients for spatial encoding, significantly
 enhancing the flexibility of image acquisition.
@@ -362,7 +362,7 @@ The present work aims to provide an efficient and comprehensive solution
 for the design of low-field \gls{mri} devices by developing and
 implementing a software and hardware framework.
 
-Within the framework of the ``DeLoRI'' (Dedicated Low-field \gls{mri}
+Within the framework of the \emph{DeLoRI} (Dedicated Low-field \gls{mri}
 for breast) project, Fraunhofer MEVIS in Bremen is actively engaged in
 crafting a compact and mobile low-field \gls{mri} unit tailored
 specifically for screening purposes. As described since 1991 low-field
@@ -386,19 +386,19 @@ leveraging AI-based methodologies.
 
 This comprehensive effort serves to bolster the prototyping phase of the
 low-field \gls{mri}. Diverging from the approach implemented by
-O'Reilly, Teeuwisse, and Webb, DeLoRI aims to design an open \gls{mri},
-departing from the circular \gls{mri} configuration discussed in the
-publication. This innovation is geared towards streamlining breast
-examinations, offering enhanced accessibility, and minimizing the
-spatial requirements during installation. In addition DeLoRI endeavors
-to achieve heightened accuracy, striving for precision levels below 1000
-\gls{ppm}. While O'Reilly, Teeuwisse, and Webb were able to modify the
-ring diameter to influence field homogeneity, the unique goal here is to
-characterize the magnets pre-installation, allowing for proactive
-assessments of homogeneity characteristics. This nuanced approach aims
-to provide insights into magnetic field uniformity before the magnets
-are integrated, thereby streamlining the optimization process.
-Furthermore,
+O'Reilly, Teeuwisse, and Webb, \emph{DeLoRI} aims to design an open
+\gls{mri}, departing from the circular \gls{mri} configuration discussed
+in the publication. This innovation is geared towards streamlining
+breast examinations, offering enhanced accessibility, and minimizing the
+spatial requirements during installation. In addition \emph{DeLoRI}
+endeavors to achieve heightened accuracy, striving for precision levels
+below 1000\gls{ppm}. While O'Reilly, Teeuwisse, and Webb were able to
+modify the ring diameter to influence field homogeneity, the unique goal
+here is to characterize the magnets pre-installation, allowing for
+proactive assessments of homogeneity characteristics. This nuanced
+approach aims to provide insights into magnetic field uniformity before
+the magnets are integrated, thereby streamlining the optimization
+process. Furthermore,
 
 It is important to note that the primary objective of this thesis is not
 merely to characterize the magnet itself; rather, the emphasis lies in
@@ -428,8 +428,8 @@ developed solution.
 
 Two sensors have been meticulously chosen for inclusion in the study.
 The ultimate objective is to assess whether these selected sensors align
-with the stringent criteria of achieving an accuracy level of 1000
-\gls{ppm}. Furthermore, the study seeks to validate whether the
+with the stringent criteria of achieving an accuracy level of
+1000\gls{ppm}. Furthermore, the study seeks to validate whether the
 measuring range of these sensors appropriately corresponds to the
 required field strength, ensuring their suitability for the intended
 application.
@@ -457,10 +457,9 @@ pivotal research questions:
 \item
   Homogeneity Measurement: Can the chosen sensors be adeptly utilized to
   measure the homogeneity of a Halbach ring-based B0 field within the
-  stringent limit of less than 1,000 \gls{ppm}? The desired outcome is a
-  measurement of less than 50 \(\mu\)T at 1000 \gls{ppm}, with a
-  specific focus on determining the sensors' viability for noise
-  measurements.
+  stringent limit of less than 1000\gls{ppm}? The desired outcome is a
+  measurement of less than 50 \(\mu\)T at 1000\gls{ppm}, with a specific
+  focus on determining the sensors' viability for noise measurements.
 \end{itemize}
 
 It is crucial to emphasize that the intention is not to characterize the
@@ -2988,7 +2987,7 @@ selected sensors meet the requirements:
   their systematic field strength
 \item
   Automated measurement of the homogeneity of Hallbach rings with an
-  accuracy of less than 1000 \gls{ppm}
+  accuracy of less than 1000\gls{ppm}
 \end{itemize}
 
 These questions are answered in the following, as a basic readout and
@@ -2997,6 +2996,10 @@ automated sensor characterisation can be performed.
 
 \hypertarget{sensors-for-evaluation}{%
 \section{Sensors for Evaluation}\label{sensors-for-evaluation}}
+
+The developed framework is directly compatible with a variety of
+magnetic field sensors without modifications, including those listed in
+the table \ref{Implemented_digital_magnetic_field_sensors.csv}.
 
 \begin{longtable}[]{@{}lll@{}}
 \caption{Digital magnetic field sensors characterised for evaluation
@@ -3016,6 +3019,33 @@ Range {[}mT{]} & ±130.0 & ±3\tabularnewline
 Background-Noise {[}uT{]} & 100 & 0.2\tabularnewline
 \bottomrule
 \end{longtable}
+
+For this evaluation, the sensors listed in the table
+\ref{Digital_magnetic_field_sensors_characterised_for_evaluation.csv}
+were used for sensor characterisation. This selection was made for the
+following reasons:
+
+The developed framework is directly compatible with a variety of
+magnetic field sensors without modifications, including those listed in
+the table. For this evaluation, the sensors listed in the table were
+used for sensor characterisation. This selection was made for the
+following reasons:
+
+\begin{itemize}
+\tightlist
+\item
+  Availability of ready to use development boards
+\item
+  Specifications correspond to the application areas
+\item
+  Availability for testing
+\end{itemize}
+
+It is possible to carry out the sensor characterisation shown here for
+other compatible sensors using the same procedure. Pre-configured
+measurements \ref{command-line-interface} and analysis pipelines
+\ref{programmable-data-processing-pipeline} are available for this
+purpose.
 
 \hypertarget{evaluation-sensor-setup}{%
 \section{Evaluation Sensor Setup}\label{evaluation-sensor-setup}}
