--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -3022,8 +3022,12 @@ Background-Noise {[}uT{]} & 100 & 0.2\tabularnewline
 
 For this evaluation, the sensors listed in the table
 \ref{Digital_magnetic_field_sensors_characterised_for_evaluation.csv}
-were used for sensor characterisation. This selection was made for the
-following reasons:
+were used for sensor characterisation. The additional column for the
+\emph{Background-Noise} was taken from the respective data sheets of the
+sesors and will be verified in the later \emph{Background-Noise}
+measurement \ref{sensor-characterisation-background-noise}.
+
+This selection was made for the following reasons:
 
 The developed framework is directly compatible with a variety of
 magnetic field sensors without modifications, including those listed in
