--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -363,14 +363,14 @@ for the design of low-field \gls{mri} devices by developing and
 implementing a software and hardware framework.
 
 Within the framework of the \emph{DeLoRI} (Dedicated Low-field \gls{mri}
-for breast) project, Fraunhofer MEVIS in Bremen is actively engaged in
-crafting a compact and mobile low-field \gls{mri} unit tailored
-specifically for screening purposes. As described since 1991 low-field
-\gls{mri}s have evolved into a burgeoning realm of research, showcasing
-substantial promise within the field of medical technology. The endeavor
-by Fraunhofer MEVIS exemplifies the ongoing commitment to harnessing the
-potential of low-field \gls{mri} for enhanced breast screening
-applications.
+for breast) project, \emph{Fraunhofer MEVIS} in Bremen is actively
+engaged in crafting a compact and mobile low-field \gls{mri} unit
+tailored specifically for screening purposes. As described since 1991
+low-field \gls{mri}s have evolved into a burgeoning realm of research,
+showcasing substantial promise within the field of medical technology.
+The endeavor by \emph{Fraunhofer MEVIS} exemplifies the ongoing
+commitment to harnessing the potential of low-field \gls{mri} for
+enhanced breast screening applications.
 
 The focus of the ongoing efforts is to enhance the homogeneity of
 magnets within low-field MRI systems below 1000\gls{ppm}, primarily
@@ -3049,7 +3049,7 @@ It is possible to carry out the sensor characterisation shown here for
 other compatible sensors using the same procedure. Pre-configured
 measurements \ref{command-line-interface} and analysis pipelines
 \ref{programmable-data-processing-pipeline} are available for this
-purpose.
+purpose are packaged with library.
 
 \hypertarget{evaluation-sensor-setup}{%
 \section{Evaluation Sensor Setup}\label{evaluation-sensor-setup}}
@@ -3091,9 +3091,9 @@ computer, which is connected to the sensors via a \emph{Hailege
 ADUM3160} \gls{usb} isolator and is placed outside the temperature
 chamber.
 
-\emph{MRPCli} \ref{command-line-interface} was used to control and
-record the measurement series, with the functions of the
-\emph{MRPDataVisualisation} \ref{mrpvisualisation} and
+For the software setup, \emph{MRPCli} \ref{command-line-interface} was
+used to control and record the measurement series, with the functions of
+the \emph{MRPDataVisualisation} \ref{mrpvisualisation} and
 \emph{MRPAnalysis} \ref{mrpanalysis} packages from the library
 \ref{software-readout-framework} being used for subsequent evaluation.
 The recorded measurement series are automatically analysed using the
@@ -3154,14 +3154,30 @@ The following data is shown in the plots:
 \item
   Plot of the raw data of the sensor
 \item
-  Plot of the sensor's internal temperature sensor
+  Plot of the sensors internal temperature sensor
 \item
-  Background noise level with reference to the baseline
+  Background noise level with reference to the initial baseline
 \item
   Histogram of the background noise level
 \end{itemize}
 
-\%\%Sensor\_noise\_evaluation\_results.csv\%\%
+\begin{longtable}[]{@{}lll@{}}
+\caption{Sensor noise evaluation results
+\label{Sensor_noise_evaluation_results.csv}}\tabularnewline
+\toprule
+Symbol & Unit & TLV493D\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Symbol & Unit & TLV493D\tabularnewline
+\midrule
+\endhead
+\(\mu_{rv}\) & \(\mu\)T &\tabularnewline
+\(\mu_{t}\) & \(\mu\)T &\tabularnewline
+\(\mu_{nl}\) & \% &\tabularnewline
+\(\sigma_{nl}\) & \% &\tabularnewline
+\bottomrule
+\end{longtable}
 
 \hypertarget{sensor-temperature-analysis}{%
 \subsection{Sensor Temperature
@@ -3180,6 +3196,13 @@ should not be used for subsequent temperature compensation.
 
 \hypertarget{raw-sensor-data-analysis}{%
 \subsection{Raw Sensor Data Analysis}\label{raw-sensor-data-analysis}}
+
+In the raw data plot, as well as its mean value \(\mu_{rv}\) of both
+sensors, an offset can also be recognised, which is dependent on the
+ambient conditions. For verification, a reference measurement of the
+environment was carried out with the calibrated \emph{Voltcraft GM70}
+Telsameter. This provides a \emph{real} baseline value of
+\(\mu_{rev}\)=-21\(\mu\)T.
 
 \begin{itemize}
 \tightlist
