--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -248,6 +248,13 @@ year = {01.01.2024},
 url = {https://docs.python.org/3/library/heapq.html},
 }
 
+@misc{magna-c,
+author = {Magna-C GmbH},
+title = {Magnet - Curie-Temperature},
+year = {01.01.2024},
+url = {https://www.magna-c.com/der-magnet/einsatztemperatur/#:~:text=Neodym%3A%20je%20nach%20Güte%2080%20°C%20bis%20200%20°C},
+}
+
 @ARTICLE{OReilly2019-rn,
   title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
                Halbach array magnet",
