--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -8,6 +8,7 @@ pages={1-10},
 url={https://api.semanticscholar.org/CorpusID:53486791}
 }
 
+
 @ARTICLE{Hori2021-pt,
 title     = "Low-field magnetic resonance imaging: Its history and
               renaissance",
@@ -80,6 +81,7 @@ month=jan,
 pages={106867}
 }
 
+
 @article{HallbachMagnetDesignPaper,
 author = {Peter Bluemler, Helmut Soltner},
 year = {2023},
@@ -115,7 +117,6 @@ url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
 
 
-
 @article{ortner2020magpylib,
   title={Magpylib: A free Python package for magnetic field computation},
   author={Ortner, Michael and Bandeira, Lucas Gabriel Coliado},
@@ -126,12 +127,14 @@ url           = {https://doi.org/10.1038/s41586-020-2649-2}
   publisher={Elsevier}
 }
 
+
 @misc{HalbachMRIDesigner,
 author = {Benjamin Menküc, Lukas Winter, Thomas O'Reilly},
 title = {HalbachMRIDesigner - Create a Halbach MRI Magnet from parametric definitions},
 year = {01.01.2024},
 url = {https://github.com/menkueclab/HalbachMRIDesigner},
 }
+
 
 @misc{HalbachOptimisation,
 author = {Thomas O'Reilly},
@@ -156,6 +159,7 @@ year = {01.01.2024},
 url = {https://pypi.org/project/MagneticReadoutProcessing/},
 }
 
+
 @misc{MagneticReadoutProcessingReadTheDocs,
 author = {Read the Docs, Inc},
 title = {MagneticReadoutProcessing - ReadTheDocs},
@@ -171,6 +175,7 @@ year = {01.01.2024},
 url = {https://peps.python.org/pep-0257/},
 }
 
+
 @misc{SphinxDocumentation,
 author = {Sphinx developers},
 title = {Sphinx makes it easy to create intelligent and beautiful documentation.},
@@ -179,13 +184,13 @@ url = {https://www.sphinx-doc.org/en/master/},
 }
 
 
-
 @misc{PyPI,
 author = {Python Software Foundation},
 title = {PyPi - The Python Package Index (PyPI) is a software directory for the Python programming language.},
 year = {01.01.2024},
 url = {https://pypi.org},
 }
+
 
 @misc{ReadTheDocs,
 author = {Read the Docs, Inc},
@@ -203,8 +208,6 @@ url = {https://docs.pytest.org/en/7.4.x/},
 }
 
 
-
-
 @misc{OpenSCAD,
 author = {Marius Kintel},
 title = {OpenSCAD - The Programmers Solid 3D CAD Modeller},
@@ -213,17 +216,13 @@ url = {https://openscad.org},
 }
 
 
-
-
-
-
-
 @misc{GithubActions,
 author = {GitHub, Inc.},
 title = {Github Actions - Automate your workflow from idea to production},
 year = {01.01.2024},
 url = {https://github.com/features/actions},
 }
+
 
 @misc{PythonGlobalSymbolTable,
 author = {Python Software Foundation},
@@ -248,12 +247,14 @@ year = {01.01.2024},
 url = {https://docs.python.org/3/library/heapq.html},
 }
 
+
 @misc{magna-c,
 author = {Magna-C GmbH},
 title = {Magnet - Curie-Temperature},
 year = {01.01.2024},
-url = {https://www.magna-c.com/der-magnet/einsatztemperatur/#:~:text=Neodym%3A%20je%20nach%20Güte%2080%20°C%20bis%20200%20°C},
+url = {https://www.magna-c.com/der-magnet/einsatztemperatur},
 }
+
 
 @ARTICLE{OReilly2019-rn,
   title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
@@ -376,6 +377,7 @@ url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
   language  = "en"
 }
 
+
 @book{inbook,
 author = {Blümler, Peter and Casanova, Federico},
 year = {2016},
@@ -385,6 +387,7 @@ title = {CHAPTER 5: Hardware developments: Halbach magnet arrays},
 isbn = {978-1-84973-915-3},
 doi = {10.1039/9781782628095-00133}
 }
+
 
 @ARTICLE{De_Vos2023-pb,
   title     = "An integrated target field framework for point-of-care halbach
@@ -422,27 +425,3 @@ doi = {10.1039/9781782628095-00133}
   copyright = "https://creativecommons.org/licenses/by/4.0",
   language  = "en"
 }
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%
-% Bücher
-%%%%%%%%%%%%%%%%%%%%%%%%
-
-%@book{Bohner2001,
-%  Author = {Bohner, Max and  Fischer, Richard},
-%  Title = {Fachkunde Kraftfahrzeugtechnik},
-%  Publisher = {VERLAG EUROPA-LEHRMITTEL},
-%  volume  = {},
-%  Year = {2001},
-%  ISBN = {3808522399},
-%  URL = {},
-%}
-
-
-
-%@Unpublished{texschreiben,
-%author = {FH Aachen},
-%title = {So geht Schreiben mit Latex},
-%note = {interner Bericht},
-%}
