--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -31,6 +31,8 @@
 \newacronym{dut}{DUT}{Device Under Test}
 \newacronym{ppm}{ppm}{Parts Per Million}
 \newacronym{snr}{SNR}{Signal to Noise Ratio}
+\newacronym{sd}{SD}{Standard deviation}
+
 
 
 
